<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle_type_text"
                    style="@style/MyTextView"
                    android:text="@string/_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle_type"
                    style="@style/MyTextView"
                    android:text="@string/type" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle_name_text"
                    style="@style/MyTextView"
                    android:text="@string/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/vehicle_name"
                    style="@style/MyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/max_speed_text"
                    style="@style/MyTextView"
                    android:text="@string/speed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/max_speed"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/_80_km" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weight_text"
                    style="@style/MyTextView"
                    android:text="@string/weight" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weight"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1000kg" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>